<resources>
    <string name="app_name">WallBox</string>
    <string name="owner_name">DILIP SUTHAR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="menu_sort_latest">Latest</string>
    <string name="menu_sort_oldest">Oldest</string>
    <string name="menu_sort_popular">Popular</string>
    <string name="menu_sort_random">Random</string>
    <string name="menu_sort_all">All</string>
    <string name="menu_sort_curated">Curated</string>
    <string name="menu_sort_featured">Featured</string>

    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>

    <!-- Toolbar -->
    <string name="toolbar_title_favorites">Favorites</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_about">About</string>
    <string name="toolbar_title_support_us">Support Us</string>
    <string name="toolbar_title_open_source_licenses">Open-source licenses</string>
    <string name="toolbar_title_me_profile">Profile</string>
    <string name="tab_title_recent_wall_fragment">Fresh</string>
    <string name="tab_title_curated_wall_fragment">Curated</string>
    <string name="tab_title_collections_fragment">Collections</string>
    <string name="tab_title_search_photo_fragment">Photos</string>
    <string name="tab_title_search_collection_fragment">Collections</string>
    <string name="tab_title_search_user_fragment">Users</string>
    <string name="tab_title_user_photos_fragment">Photos</string>
    <string name="tab_title_user_liked_fragment">Liked</string>
    <string name="tab_title_user_collections_fragment">Collections</string>

    <!-- Nav drawer -->
    <string name="nav_title_wallpapers">Wallpapers</string>
    <string name="nav_title_favorites">Favorites</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_support_us">Support Us</string>
    <string name="nav_title_about">About</string>
    <string name="nav_title_share_app">Share App</string>
    <string name="nav_title_rate_review">rate &amp; Review</string>

    <!-- Notify -->
    <string name="title_network_error">Oh shucks!</string>
    <string name="desc_network_error">Slow or no internet connection. Please check and try again.</string>
    <string name="title_http_error">404</string>
    <string name="desc_http_error">Something went wrong.</string>
    <string name="title_no_items">Nothing to show!</string>
    <string name="desc_no_items">Try searching for something…</string>
    <string name="retry">Retry</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="photo_statistics_error">Failed to load statistics</string>
    <string name="photo_error">Failed to load photo details</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="error">Error</string>

    <string name="msg_more_photos">More photos..</string>
    <string name="msg_no_more_photos">No more photos available :(</string>
    <string name="msg_clear_cache">Cache cleared successfully</string>
    <string name="msg_reset_tutorial">Tutorial reset successfully</string>
    <string name="msg_no_photo_info">No photo info!</string>
    <string name="msg_no_speech_to_text_support">Your device doesn\'t support speech input</string>
    <string name="msg_wallpaper_set_success">Wallpaper set successfully</string>
    <string name="msg_wallpaper_set_failed">Failed to load wallpaper</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_download_start">Downloading started…</string>
    <string name="msg_photo_downloaded">is already downloaded</string>

    <string name="photos_on">photos on </string>
    <string name="unsplash">Unsplash</string>

    <string name="title_language">Language</string>
    <string name="title_Theme">Theme</string>
    <string name="title_clear_cache">Clear Cache</string>
    <string name="title_wallpaper_preview_quality">Wallpaper Preview Quality</string>
    <string name="title_wallpaper_save_location">Wallpaper Save Location</string>
    <string name="title_reset_tutorial">Reset Tutorial</string>
    <string name="title_official_site">Go to the official site</string>
    <string name="title_description">Description</string>
    <string name="title_info">Info</string>
    <string name="title_photo_info">Camera</string>
    <string name="title_color_palette">Color Palette</string>
    <string name="title_select_download_quality">Select Download Quality</string>
    <string name="title_select_quality">Select Quality</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_find_us_on">Find us on</string>
    <string name="title_about">About</string>
    <string name="title_warning">Warning</string>

    <string name="desc_no_location">No location</string>
    <string name="desc_no_description">No description</string>
    <string name="desc_theme">Get that whiteness out of my sight!</string>
    <string name="desc_clear_cache">Remove image cache from your storage created after loading cloud wallpaper</string>
    <string name="desc_reset_tutorial">Reset startup intro tutorial</string>
    <string name="desc_quality_warn_dialog">It will use a high amount of data, Are you sure?</string>

    <string name="hint_search_bar">Search here</string>

    <string-array name="languages_name">
        <item>English</item>
        <item>हिंदी</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="languages_code">
        <item>en</item>
        <item>hi</item>
        <item>zh</item>
    </string-array>

    <string-array name="wallpaper_quality">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>

    <string-array name="download_quality">
        <item>Raw</item>
        <item>Full</item>
        <item>Regular</item>
        <item>Small</item>
        <item>Thumb</item>
    </string-array>

    <!-- Extras -->
    <string name="wallpapers">Wallpapers</string>
    <string name="wallpaper_by">by </string>
    <string name="total_cache">Total cache: </string>


    <!-- lorem ipsum -->
    <string name="dummy_description">Proin eget tortor risus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</string>

</resources>
