<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
          android:title="@string/menu_search"
          android:tooltipText="@string/menu_search"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_toolbar_search"/>

    <item android:id="@+id/action_sort"
          android:title="@string/menu_sort"
          android:tooltipText="@string/menu_sort"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_toolbar_sort">
        <menu>
            <group android:checkableBehavior="none">
                <item android:id="@+id/menu_sort_recent_latest"
                      android:title="@string/menu_sort_latest"/>
                <item android:id="@+id/menu_sort_recent_oldest"
                      android:title="@string/menu_sort_oldest"/>
                <item android:id="@+id/menu_sort_recent_popular"
                      android:title="@string/menu_sort_popular"/>

                <item android:id="@+id/menu_sort_curated_latest"
                      android:title="@string/menu_sort_latest"/>
                <item android:id="@+id/menu_sort_curated_oldest"
                      android:title="@string/menu_sort_oldest"/>
                <item android:id="@+id/menu_sort_curated_popular"
                      android:title="@string/menu_sort_popular"/>

                <item android:id="@+id/menu_sort_collection_all"
                      android:title="@string/menu_sort_all"/>
                <item android:id="@+id/menu_sort_collection_featured"
                      android:title="@string/menu_sort_featured"/>
            </group>
        </menu>
    </item>

</menu>