<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context=".activity.MainActivity">

    <androidx.emoji.widget.EmojiTextView
            tools:text="@string/owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_bottom_msg"
            android:textColor="?attr/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:imeOptions="actionSend"
            android:inputType="textCapSentences|textMultiLine"/>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="46sp"
            android:textColor="?attr/primaryTextColor"
            android:id="@+id/txt_app_name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_bottom_msg"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_app_name">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/secondaryTextColor"
                android:text="@string/powered_by"/>
        <View
                android:layout_width="5dp"
                android:layout_height="0dp"/>
        <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/secondaryTextColor"
                android:text="@string/unsplash"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>